Locate Button works now
Locate Button with POI’s now working

--- a/codecatch/www/index.html
+++ b/codecatch/www/index.html
@@ -148,7 +148,8 @@
             heading="{{x.name}}">
             {{x.beschreibung}}
             {{x.x}}
-            <button onclick="locateMap({{x.x}}, {{x.y}})">
+            
+            <button ng-click="locateMap(x.x, x.y)">
               Locate
             </button>
           </accordion-group>
