Just show 1 location marker in POI Menü
s.o.

--- a/codecatch/www/index.html
+++ b/codecatch/www/index.html
@@ -144,6 +144,11 @@
             <button ng-click="locateMap(x.x, x.y, x.name)">
             Locate
             </button>
+            <!--
+            <button ng-show="showbutton2" ng-click="deleteLocateMarker(); locateMap(x.x, x.y, x.name); showbutton=!showbutton; showbutton2=!showbutton2">
+            Locate2
+            </button>
+          -->
             </accordion-group> 
           </accordion>
         </div>         
