--- a/codecatch/www/index.html
+++ b/codecatch/www/index.html
@@ -42,8 +42,8 @@
 
           <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-              <li ><a href="" ng-click="showPos = !showPos; showPoi=false">Postion</a></li>
-              <li ><a href="" ng-click="showPoi = !showPoi; showPos=false">POI</a></li>
+              <li ><a href="" ng-click="showPosChange(); showPoiFalse()">Postion</a></li>
+              <li ><a href="" ng-click="showPoiChange(); showPosFalse()">POI</a></li>
               <li ><a href="">Reset</a></li>
             </ul>
           </div><!--/.nav-collapse -->
@@ -125,7 +125,7 @@
 
     -->
     <div ng-controller="jsonCtrl">
-      <div id="footerPoi" ng-show="showPoi" style="height:50%;overflow:auto;">
+      <div id="footerPoi" ng-show="{{showPoi}}" style="height:50%;overflow:auto;">
         <div id="container">
 
 
@@ -156,26 +156,26 @@
 
       <!-- FooterDiv for Position Button -->
 
-      <div id="footerPosition" ng-show="showPos" style="height:50%;overflow:auto;">
+      <div id="footerPosition" ng-show="{{showPos}}" style="height:50%;overflow:auto;">
         <div id="container">
           <div class="input-group">
             <span class="input-group-addon" id="sizing-addon2">Positionscode:</span>
             <input type="text" class="form-control" placeholder="&quot;1234&quot;" aria-describedby="sizing-addon2" ng-model="PositionCode">
           </div>
           
-            <button ng-click="getPosition(PositionCode); showAcc=true">
+            <button ng-click="getPosition(PositionCode); showAccTrue()">
             Wo bin ich?
             </button>
 
             <!-- Accordion shows when Positionscode true after click on Button -->
 
-          <div ng-show="showAcc">
+          <div ng-show="{{showAcc}}">
             Navigiere zu:
             <accordion close-others="true">
 
             <accordion-group class="fx-fade-right fx-speed-300" ng-repeat="x in pois | filter:searchPOI.tags | filter:searchPOI.name" heading="{{x.name}}">
               {{x.beschreibung}}
-            <button ng-click="drawWay(x.x, x.y, x.name)">
+            <button showPosFalse ng-click="drawWay(x.x, x.y, x.name)">
             Navigate
             </button>
 
