input size of poscode limited

--- a/codecatch/www/index.html
+++ b/codecatch/www/index.html
@@ -185,7 +185,7 @@
         <div id="container">
           <div class="input-group">
             <span class="input-group-addon" id="sizing-addon2">Positionscode (4-stellig):</span>
-            <input type="text" class="form-control" placeholder="&quot;1234&quot;" aria-describedby="sizing-addon2" ng-model="PositionCode">
+            <input type="text" class="form-control" placeholder="&quot;1234&quot;" aria-describedby="sizing-addon2" ng-model="PositionCode" maxlength="4">
           </div>
           
             <button ng-click="delteAllMarkers(); getPosition(PositionCode, 0)">
