--- a/codecatch/www/index.html
+++ b/codecatch/www/index.html
@@ -95,8 +95,22 @@
 
          map.on('click', onMapClick);
 
-    
     // until here
+
+
+
+/***  little hack starts here ***/
+L.Map = L.Map.extend({
+    openPopup: function(popup) {
+        //        this.closePopup();  // just comment this
+        this._popup = popup;
+
+        return this.addLayer(popup).fire('popupopen', {
+            popup: this._popup
+        });
+    }
+}); /***  end of hack ***/
+
 
          </script>
        </div>
@@ -152,7 +166,7 @@
 
             <accordion-group class="fx-fade-right fx-speed-300" ng-repeat="x in pois | filter:searchPOI.tags | filter:searchPOI.name" heading="{{x.name}}">
               {{x.beschreibung}}
-            <button ng-click="locateMap(x.x, x.y, x.name)">
+            <button ng-click="locateMap(x.x, x.y, x.name, x.logoName)">
             Locate
             </button>
             <!--
