--- a/codecatch/www/index.html
+++ b/codecatch/www/index.html
@@ -198,7 +198,7 @@ L.Map = L.Map.extend({
             <input type="text" class="form-control" placeholder="&quot;1234&quot;" aria-describedby="sizing-addon2" ng-model="PositionCode" maxlength="4">
           </div>
           
-            <button ng-click="delteAllMarkers(); getPosition(PositionCode, 0)">
+            <button ng-click="removeAllMarkers(); getPosition(PositionCode, 0)">
             Zeige Position
             </button>
 
