new compass image at finla position

--- a/codecatch/www/index.html
+++ b/codecatch/www/index.html
@@ -150,7 +150,7 @@
 			<!-- compass needle -->
 			<div id="compass">
 				<script type="text/javascript" charset="utf-8">compassInit();</script>
-				<img src="pfeil.png" ></img>
+				<img src="compass.png" ></img> 	<!-- compass.png ist aus dem Internet geklaut, es sind keine Rechte an diesem Bild vorhanden -->
 			</div>
 		</div>
 	</body>
