--- a/codecatch/www/index.html
+++ b/codecatch/www/index.html
@@ -53,12 +53,37 @@
 		<div ng-controller="jsonCtrl">
 
 
-		
+<!-- NavBar -->
+      <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="">[Codecatch]</a>
+          </div>
+          <!--<div id="App1" class="mainContainer" data-ng-app="jsonDataApp">-->
 
+          <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+              <li ><a href="" ng-click="showPos = !showPos; showPoi = false; removeAllMarkers()">Position</a></li>
+              <li ><a href="" ng-click="showPoi = !showPoi; showPos = false; removeAllMarkers()">POI</a></li>
+              <li ><a href="" ng-click="removeAllMarkers(); showPoi=false; showPos=false; showAcc=false; showFalseInput=false">Reset</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </nav>
+		
+				<!--
+						Buttons
 
 						<a href="" ng-click="showPos = !showPos; showPoi = false; removeAllMarkers()" data-toggle="modal" data-target="#myModal" class="btn btn-circlePos btn-success"><font color="#000000">Pos</font></span></a>
         		<a href="" ng-click="showPoi = !showPoi; showPos = false; removeAllMarkers()" data-toggle="modal" data-target="#myModal" class="btn btn-circlePoi btn-warning"><font color="#000000">Poi</font></span></a>
         		<a ref="" ng-click="removeAllMarkers(); showPoi=false; showPos=false; showAcc=false; showFalseInput=false" data-toggle="modal" data-target="#myModal" class="btn btn-circleRes btn-danger"><font color="#000000">Reset</font></span></a>
+        	-->
 
    <!-- 
 
