--- a/codecatch/www/test.html
+++ b/codecatch/www/test.html
@@ -8,7 +8,7 @@
 		<script src="js/app.js"></script>
 		<script src="js/bootstrap.js"></script>
 		<link href="css/bootstrap.min.css" rel="stylesheet">
-		<link rel="stylesheet" href="css/codecatch.css" />
+		<script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.13.0/ui-bootstrap-tpls.js"></script>
 		
 		
 		<!-- leaflet imports-->
@@ -17,7 +17,7 @@
 		<script type="text/javascript" src="js/jquery-2.1.4.js"></script>
 	
 
-		
+		<link rel="stylesheet" href="css/codecatch.css" />
 
 		
 		
@@ -44,48 +44,21 @@
 			<script type="text/javascript" charset="utf-8">mapInit()</script>
 			<!-- compass needle -->
 			<div id="compass">
-				<script type="text/javascript" charset="utf-8"></script>
+				<script type="text/javascript" charset="utf-8">compassInit();</script>
 				<img src="compass.png" ></img> 	<!-- compass.png ist aus dem Internet geklaut, es sind keine Rechte an diesem Bild vorhanden -->
 			</div>
 		</div>
 
 	
-		<div id="controller" ng-controller="jsonCtrl">
+		<div ng-controller="jsonCtrl">
 
 
-<!-- NavBar -->
-      <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="" ng-click="removeAllMarkers(); showPoi=false; showPos=false; showAcc=false; showFalseInput=false">[Codecatch]</a>
-          </div>
-          <!--<div id="App1" class="mainContainer" data-ng-app="jsonDataApp">-->
-
-          <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-              <li ><a href="" ng-click="showPos = !showPos; showPoi = false; removeAllMarkers()">Position</a></li>
-              <li ><a href="" ng-click="showPoi = !showPoi; showPos = false; removeAllMarkers()">POI</a></li>
-              <li ><a href="" ng-click="removeAllMarkers(); showPoi=false; showPos=false; showAcc=false; showFalseInput=false">Reset</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </nav>
 		
-				<!--
-						Buttons
-					-->
-					<!--
+
 
 						<a href="" ng-click="showPos = !showPos; showPoi = false; removeAllMarkers()" data-toggle="modal" data-target="#myModal" class="btn btn-circlePos btn-success"><font color="#000000">Pos</font></span></a>
         		<a href="" ng-click="showPoi = !showPoi; showPos = false; removeAllMarkers()" data-toggle="modal" data-target="#myModal" class="btn btn-circlePoi btn-warning"><font color="#000000">Poi</font></span></a>
         		<a ref="" ng-click="removeAllMarkers(); showPoi=false; showPos=false; showAcc=false; showFalseInput=false" data-toggle="modal" data-target="#myModal" class="btn btn-circleRes btn-danger"><font color="#000000">Reset</font></span></a>
-        	-->
 
    <!-- 
 
@@ -107,8 +80,12 @@
 					<accordion close-others="true">
 						<accordion-group class="fx-fade-right fx-speed-300" ng-repeat="x in pois | filter:searchPOI.tags | filter:searchPOI.name" heading="{{x.name}}">
 							{{x.beschreibung}}
-							<button class="btn btn-primary btn-sm" ng-click="locateMap(x.x, x.y, x.name, x.logoName)">Locate</button>
-					
+						<button ng-click="locateMap(x.x, x.y, x.name, x.logoName)">Locate</button>
+						<!--
+						<button ng-show="showbutton2" ng-click="deleteLocateMarker(); locateMap(x.x, x.y, x.name); showbutton=!showbutton; showbutton2=!showbutton2">
+						Locate2
+						</button>
+						-->
 						</accordion-group> 
 					</accordion>
 				</div>         
@@ -122,7 +99,7 @@
 			Zum Ausblenden einfach ng-click="show = !show"
 
 			-->
-
+      
 
 			<!-- FooterDiv for Position Button -->
 
@@ -130,25 +107,22 @@
 				<div id="container">
 					<div class="input-group" id="staticParent">
 						<span class="input-group-addon" id="sizing-addon2">Positionscode (4-stellig):</span>
-						<input id="child" type="textarea" class="form-control" placeholder="&quot;1234&quot;" aria-describedby="sizing-addon2" ng-model="PositionCode" maxlength="4" onkeydown="if (event.keyCode == 13) document.getElementById('poiclick').click()">
+						<input id="child" type="textarea" class="form-control" placeholder="&quot;1234&quot;" aria-describedby="sizing-addon2" ng-model="PositionCode" maxlength="4">
 					</div>
-
-					<button class="btn btn-primary btn-sm" id="poiclick" ng-click="removeAllMarkers(); getPosition(PositionCode, 0)">Zeige Position</button>
-
-					<button class="btn btn-primary btn-sm" ng-click="getPosition(PositionCode, 1)">Zeige Position und öffne POI-Liste</button>
-
-						<div ng-show="showFalseInput">
+					<button ng-click="removeAllMarkers(); getPosition(PositionCode, 0)">Zeige Position</button>
+					<button ng-click="getPosition(PositionCode, 1)">Zeige Position und öffne POI-Liste</button>
+					<div ng-show="showFalseInput">
 						Der Positionscode wurde falsch eingegeben! Bitte erneut eingeben!
-						</div>
+					</div>
 
 					<!-- Accordion shows when Positioncode true after click on Button -->
 
-						<div ng-show="showAcc">
-							Navigiere zu:
-							<accordion close-others="true">
-								<accordion-group class="fx-fade-right fx-speed-300" ng-repeat="x in pois2 | filter:searchPOI.tags | filter:searchPOI.name" heading="{{x.name}}">
+					<div ng-show="showAcc">
+						Navigiere zu:
+						<accordion close-others="true">
+							<accordion-group class="fx-fade-right fx-speed-300" ng-repeat="x in pois2 | filter:searchPOI.tags | filter:searchPOI.name" heading="{{x.name}}">
 								{{x.beschreibung}}
-								<button class="btn btn-primary btn-sm" ng-click="drawWay(x.x, x.y, x.name)">Navigate</button>
+								<button ng-click="drawWay(x.x, x.y, x.name)">Navigate</button>
 							</accordion-group> 
 						</accordion>
 					</div>
